sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var a=0
  var a= getNombreValeurs()
  for(j<-a-2 to ){
    for(i<- 2 to j){
       if (plusPetit(j,j+1)==true){
        echange(j+1,j)
  }
    }
      
    }
   
      
      }